Tue Oct  1 17:07:25 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSSimpleLayoutManager.h (_lineLayoutInformation): Renamed
	to _lineLayoutInfo.
	* Source/GSSimpleLayoutManager.m: Updated for change.

Tue Oct  1 16:58:36 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSTextView.m ([NSTextView -moveToEndOfLine:]): Fixed
	moving to the end of 'one before the last' line.
	([NSTextView -moveToEndOfParagraph:]): Idem.

Tue Oct  1 16:40:29 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSSimpleLayoutManager.m
	([-glyphIndexForPoint:inTextContainer:fractionOfDistanceThroughGlyph:]):
	Fix the insertion point positioning when clicking beyond the last
	character of a line in an NSTextView, or before the first one;
	special care to be used for the last line in the textview
	(Originated by a patch by David Ayers <d.ayers@inode.at>, modified
	by me).

2002-09-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFont.m: Rewrote code dealing with creation and destruction
	of font objects to remove holes in the original caching scheme and to
	optimimise font creation/destruction somewhat.  All font objects
	should now be handled by the cache, no matter how they are created.

2002-09-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFont.m: Replace caching code which never released fonts
	with a cache which only holds fonts as long as something is using them.

2002-09-26  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSBrowserCell.h
	Removed all references to coding.
	* Source/NSBundleAdditions.m
	Moved add on methods.
	* Source/NSImage.m
	Moved method [NSBundle pathForImageResource:] to here.
	* Source/NSSound.m
	Moved method [NSBundle pathForSoundResource:] to here.
	* Source/NSButton.m
	Removed the coder methods as they were just super calls. 
	
Wed Sep 25 03:37:27 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/gui/NSInterfaceStyle.h: Put include guards in
	the canonical form, by swapping them with #ifndef STRICT_OPENSTEP;